creacion de stock mejoras de templates